# AaUD1

./: .gitignore  AUSLite.vcxproj  AUSLite.vcxproj.filters  CMakeLists.txt  ClassDiagram.cd  DataStructures.sln  file_log_consumer.cpp  file_log_consumer.h  log.csv  main.cpp
SemestralnaPraca/: main.cpp
SemestralnaPraca/dataLoader/: dataLoader.cpp  dataLoader.h
gui/: gui_log_consumer.cpp  gui_log_consumer.h  main_form.cpp  main_form.h
semestralnaPraca/: aplikacia.cpp  aplikacia.h  main.cpp  memoryLeak.txt  tableLoader.h
semestralnaPraca/Criterion/: criterion.h  criterionNazov.h  criterionUJPrislusnost.h  criterionUJTyp.h  criterionVZPocet.h  criterionVZPodiel.h
semestralnaPraca/dataLoader/: dataLoader.cpp  dataLoader.h  tableLoader.cpp  tableLoader.h
semestralnaPraca/dataLoader/rawData/: obce.csv  okresy.csv
semestralnaPraca/dataStructure/: kraj.h  ostatneUdaje.h  storedData.h  uzemnaJednotka.h
semestralnaPraca/filtre/: advFilter.h  filter.h  filterUJPrislusnost.h  filterUJTyp.h  filterVZPocet.h  filterVZPodiel.h  filterVzdelavaniePocet.h
semestralnaPraca/filtre/sort/: shellSort.h
structures/_logger/: file_log_consumer.cpp  file_log_consumer.h  logger.h
structures/array/: array.h
structures/list/: array_list.h  double_linked_list.h  linked_list.h
structures/matrix/: coherent_matrix.h  incoherent_matrix.h
structures/priority_queue/: heap.h  priority_queue.h  priority_queue_limited_sorted_array_list.h  priority_queue_linked_list.h  priority_queue_list.h  priority_queue_sorted_array_list.h  priority_queue_two_lists.h  priority_queue_unsorted_array_list.h
structures/queue/: explicit_queue.h  implicit_queue.h
structures/stack/: explicit_stack.h  implicit_stack.h
structures/table/: binary_search_tree.h  sequence_table.h  sorted_sequence_table.h  treap.h  unsorted_sequence_table.h
structures/table/sorting/: merge_sort.h
structures/tree/: binary_tree.h  k_way_tree.h  multi_way_tree.h  tree.h
structures/vector/: vector.cpp
tests/: test.h
tests/array/: array_test.h
tests/list/: list_test.cpp  list_test.h
tests/matrix/: matrix_test.cpp  matrix_test.h
tests/priority_queue/: priority_queue_test.cpp  priority_queue_test.h
tests/sorting_test/: sorting_test.cpp
tests/table/: table_test.cpp  table_test.h
tests/vector/: vector_test.cpp  vector_test.h
ui/: console.cpp  console.h  ui_keeper.cpp  ui_keeper.h
